--- a/Sprint4/Task3.ipynb
+++ b/Sprint4/Task3.ipynb
@@ -57,20 +57,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Планета Земля, Дэвид Аттенборо, 2006, 60 минут, Язык: Английский\n",
-      "Тема: Природа, Рассказчик: Дэвид Аттенборо\n",
-      "Документальный фильм \"Планета Земля\" доступен для потоковой передачи.\n",
+      "Зарождение Земли, NASA, 2021, 120 минут, 0 млн.руб., язык Английский\n",
+      "Тема: Документальные фильмы, Рассказчик: Дэвид Аттенборо\n",
+      "Документальный фильм \"Зарождение Земли\" доступен\n",
       "Вы смотрите документальный фильм\n",
       "\n",
-      "Начало, Кристофер Нолан, 2010, 148 минут, Язык: Английский\n",
-      "Жанр: Научная фантастика, Сиквел: Да\n",
-      "Художественный фильм \"Начало\" доступен для аренды.\n",
+      "Война миров Z, Марк Форстер, 2013, 120 минут, 0 млн.руб., язык Английский\n",
+      "Жанр: приключения, боевик, ужасы, фантастика, Сиквел: Да\n",
       "Вы смотрите художественный фильм\n",
       "\n",
-      "История игрушек, Джон Лассетер, 1995, 81 минут, Язык: Английский\n",
-      "Анимационная студия: Pixar, Подходит для семьи: Да\n",
-      "Анимационный фильм \"История игрушек\" доступен для аренды.\n",
-      "Анимационный фильм \"История игрушек\" доступен для потоковой передачи.\n",
+      "Головоломvка 2, Келс Манн, 2024, 120 минут, 0 млн.руб., язык Английский\n",
+      "Анимационная студия: Pixar, Сиквел: Да\n",
+      "Анимационный фильм \"Головоломvка 2\" доступен\n",
+      "Анимационный фильм \"Головоломvка 2\" доступен для потоковой передачи.\n",
       "Вы смотрите анимационный фильм\n"
      ]
     }
@@ -80,15 +79,21 @@
     "using System.Collections.Generic;\n",
     "\n",
     "// Интерфейсы\n",
-    "public interface IRentable\n",
+    "public interface IMovie\n",
+    "{\n",
+    "    void GetInfo(); \n",
+    "}\n",
+    "\n",
+    "public interface IWatch\n",
+    "{\n",
+    "    void Watch(); \n",
+    "}\n",
+    "\n",
+    "public interface IRate\n",
     "{\n",
     "    void Rent();\n",
     "}\n",
     "\n",
-    "public interface IStreamable\n",
-    "{\n",
-    "    void Stream();\n",
-    "}\n",
     "\n",
     "// Базовый класс\n",
     "public abstract class Movie\n",
@@ -97,18 +102,20 @@
     "    public string Director { get; set; }\n",
     "    public int ReleaseYear { get; set; }\n",
     "    public int Rating { get; private set; }\n",
-    "\n",
-    "    // Новые атрибуты\n",
-    "    public int Duration { get; set; } // Продолжительность в минутах\n",
+    "    public decimal Budget { get; set; }\n",
+    "    public decimal BoxOfficeRevenue { get; set; }\n",
     "    public string Language { get; set; } // Язык фильма\n",
+    "    public int RuntimeLength { get; set; } // Новый атрибут для длительности фильма\n",
+    "    public int ProductionCost { get; set; } // Новый атрибут для затрат на производство\n",
+    "    public string IsAwardWinner { get; set; } // Новый атрибут для информации о наградах  \n",
     "    public bool IsAvailable { get; set; } // Доступность для просмотра\n",
     "\n",
-    "    public Movie(string title, string director, int releaseYear, int duration, string language)\n",
+    "    public Movie(string title, string director, int releaseYear, int runtimeLength, string language)\n",
     "    {\n",
     "        Title = title;\n",
     "        Director = director;\n",
     "        ReleaseYear = releaseYear;\n",
-    "        Duration = duration;\n",
+    "        RuntimeLength = runtimeLength;\n",
     "        Language = language;\n",
     "        IsAvailable = true;\n",
     "    }\n",
@@ -117,13 +124,23 @@
     "\n",
     "    public virtual void GetInfo()\n",
     "    {\n",
-    "        Console.WriteLine($\"{Title}, {Director}, {ReleaseYear}, {Duration} минут, Язык: {Language}\");\n",
+    "        Console.WriteLine($\"{Title}, {Director}, {ReleaseYear}, {RuntimeLength} минут, {ProductionCost} млн.руб., язык {Language}\");\n",
     "    }\n",
     "\n",
     "    public virtual void Rate(int rating)\n",
     "    {\n",
     "        Rating = rating;\n",
     "        Console.WriteLine($\"Фильм оценен на {rating}/10\");\n",
+    "    }\n",
+    "\n",
+    "      public virtual decimal CalculateProfit()\n",
+    "    {\n",
+    "        return BoxOfficeRevenue - Budget;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void ProInf()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Длительность: {RuntimeLength} , затраты на производство {ProductionCost} , награды {IsAwardWinner}.\");\n",
     "    }\n",
     "\n",
     "    public void ToggleAvailability()\n",
@@ -134,7 +151,7 @@
     "}\n",
     "\n",
     "// Производный класс Documentary\n",
-    "class Documentary : Movie, IStreamable\n",
+    "class Documentary : Movie, IWatch\n",
     "{\n",
     "    public string Theme { get; set; }\n",
     "    public string Narrator { get; set; } // Новый атрибут\n",
@@ -157,24 +174,24 @@
     "        Console.WriteLine($\"Тема: {Theme}, Рассказчик: {Narrator}\");\n",
     "    }\n",
     "\n",
-    "    //ЯВНАЯ РЕАЛИЗАЦИЯ\n",
-    "    void IStreamable.Stream()\n",
+    "    //явная реализация\n",
+    "    void IWatch.Watch()\n",
     "    {\n",
-    "        Console.WriteLine($\"Документальный фильм \\\"{Title}\\\" доступен для потоковой передачи.\");\n",
+    "        Console.WriteLine($\"Документальный фильм \\\"{Title}\\\" доступен\");\n",
     "    }\n",
     "}\n",
     "\n",
     "// Производный класс FeatureFilm\n",
-    "class FeatureFilm : Movie, IRentable\n",
+    "class FeatureFilm : Movie, IMovie\n",
     "{\n",
     "    public string Genre { get; set; }\n",
-    "    public bool HasSequel { get; set; } // Новый атрибут\n",
+    "    public bool OtherParts { get; set; } // Новый атрибут\n",
     "\n",
-    "    public FeatureFilm(string title, string director, int releaseYear, int duration, string language, string genre, bool hasSequel)\n",
+    "    public FeatureFilm(string title, string director, int releaseYear, int duration, string language, string genre, bool otherparts)\n",
     "        : base(title, director, releaseYear, duration, language)\n",
     "    {\n",
     "        Genre = genre;\n",
-    "        HasSequel = hasSequel;\n",
+    "        OtherParts = otherparts;\n",
     "    }\n",
     "\n",
     "    public override void Watch()\n",
@@ -185,27 +202,27 @@
     "    public override void GetInfo()\n",
     "    {\n",
     "        base.GetInfo();\n",
-    "        Console.WriteLine($\"Жанр: {Genre}, Сиквел: {(HasSequel ? \"Да\" : \"Нет\")}\");\n",
+    "        Console.WriteLine($\"Жанр: {Genre}, Сиквел: {(OtherParts ? \"Да\" : \"Нет\")}\");\n",
     "    }\n",
     "    \n",
-    "    //ЯВНАЯ РЕАЛИЗАЦИЯ\n",
-    "    void IRentable.Rent()\n",
+    "    //явная реали\n",
+    "    void IMovie.GetInfo()\n",
     "    {\n",
-    "        Console.WriteLine($\"Художественный фильм \\\"{Title}\\\" доступен для аренды.\");\n",
+    "        Console.WriteLine($\"Художественный фильм \\\"{Title}\\\" доступен \");\n",
     "    }\n",
     "}\n",
     "\n",
     "// Производный класс AnimatedMovie\n",
-    "class AnimatedMovie : Movie, IStreamable, IRentable\n",
+    "class AnimatedMovie : Movie, IWatch, IRate\n",
     "{\n",
     "    public string AnimationStudio { get; set; }\n",
-    "    public bool IsFamilyFriendly { get; set; } // Новый атрибут\n",
+    "    public bool OtherParts { get; set; } // Новый атрибут\n",
     "\n",
     "    public AnimatedMovie(string title, string director, int releaseYear, int duration, string language, string animationStudio, bool isFamilyFriendly)\n",
     "        : base(title, director, releaseYear, duration, language)\n",
     "    {\n",
     "        AnimationStudio = animationStudio;\n",
-    "        IsFamilyFriendly = isFamilyFriendly;\n",
+    "        OtherParts = isFamilyFriendly;\n",
     "    }\n",
     "\n",
     "    public override void Watch()\n",
@@ -216,44 +233,44 @@
     "    public override void GetInfo()\n",
     "    {\n",
     "        base.GetInfo();\n",
-    "        Console.WriteLine($\"Анимационная студия: {AnimationStudio}, Подходит для семьи: {(IsFamilyFriendly ? \"Да\" : \"Нет\")}\");\n",
+    "        Console.WriteLine($\"Анимационная студия: {AnimationStudio}, Сиквел: {(OtherParts ? \"Да\" : \"Нет\")}\");\n",
     "    }\n",
     "\n",
-    "    //ЯВНАЯ РЕАЛИЗАЦИЯ\n",
-    "    void IStreamable.Stream()\n",
+    "    void IWatch.Watch()\n",
     "    {\n",
     "        Console.WriteLine($\"Анимационный фильм \\\"{Title}\\\" доступен для потоковой передачи.\");\n",
     "    }\n",
     "\n",
-    "    //ЯВНАЯ РЕАЛИЗАЦИЯ\n",
-    "    void IRentable.Rent()\n",
+    "    void IRate.Rent()\n",
     "    {\n",
-    "        Console.WriteLine($\"Анимационный фильм \\\"{Title}\\\" доступен для аренды.\");\n",
+    "        Console.WriteLine($\"Анимационный фильм \\\"{Title}\\\" доступен\");\n",
     "    }\n",
     "}\n",
     "\n",
-    "// Сервис управления фильмами\n",
-    "public class MovieService\n",
+    "\n",
+    "//Внедрение зависимостей в сервисе управления фильмами:\n",
+    "public class MovieService // используется внедрение зависимостей через конструктор:\n",
     "{\n",
     "    private readonly Movie _movie;\n",
     "\n",
-    "    public MovieService(Movie movie)\n",
+    "    public MovieService(Movie movie) //ВНЕДРЕНИЕ, конструктор принимает Movie и сохраняет его в _movie. Это внедрение зависимости.\n",
     "    {\n",
     "        _movie = movie;\n",
     "    }\n",
     "\n",
-    "    public void DisplayInfo()\n",
+    "    public void DisplayInfo() //методы работы\n",
     "    {\n",
     "        _movie.GetInfo();\n",
     "\n",
-    "        if (_movie is IRentable rentable)\n",
+    "        //проверяет, реализует ли фильм интерфейс IRate\n",
+    "        if (_movie is IRate rentable) //IS - код может работать с разными типами фильмов без необходимости знать конкретный тип\n",
     "        {\n",
     "            rentable.Rent();\n",
     "        }\n",
     "\n",
-    "        if (_movie is IStreamable streamable)\n",
+    "        if (_movie is IWatch streamable)\n",
     "        {\n",
-    "            streamable.Stream();\n",
+    "            streamable.Watch();\n",
     "        }\n",
     "    }\n",
     "\n",
@@ -265,14 +282,14 @@
     "        }\n",
     "        else\n",
     "        {\n",
-    "            Console.WriteLine($\"Фильм \\\"{_movie.Title}\\\" недоступен для просмотра.\");\n",
+    "            Console.WriteLine($\"Фильм \\\"{_movie.Title}\\\" пока что недоступен для просмотра.\"); //ошибка\n",
     "        }\n",
     "    }\n",
     "}\n",
     "\n",
-    "var documentary = new Documentary(\"Планета Земля\", \"Дэвид Аттенборо\", 2006, 60, \"Английский\", \"Природа\", \"Дэвид Аттенборо\");\n",
-    "var featureFilm = new FeatureFilm(\"Начало\", \"Кристофер Нолан\", 2010, 148, \"Английский\", \"Научная фантастика\", true);\n",
-    "var animatedMovie = new AnimatedMovie(\"История игрушек\", \"Джон Лассетер\", 1995, 81, \"Английский\", \"Pixar\", true);\n",
+    "var documentary = new Documentary(\"Зарождение Земли\", \"NASA\", 2021, 120, \"Английский\", \"Документальные фильмы\", \"Дэвид Аттенборо\");\n",
+    "var featureFilm = new FeatureFilm(\"Война миров Z\", \"Марк Форстер\", 2013, 120, \"Английский\", \"приключения, боевик, ужасы, фантастика\", true);\n",
+    "var animatedMovie = new AnimatedMovie(\"Головоломvка 2\", \"Келс Манн\", 2024, 120, \"Английский\", \"Pixar\", true);\n",
     "\n",
     "var documentaryService = new MovieService(documentary);\n",
     "documentaryService.DisplayInfo();\n",
