--- a/Sprint3/aoao3.ipynb
+++ b/Sprint3/aoao3.ipynb
@@ -2,176 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Общая стоимость: $1070\n",
-      "CPU: Процессор: Intel Core i7, Цена: 300, Ядра: 4\n",
-      "RAM: Оперативная память: Corsair Vengeance LPX, Цена: 120, Объем: 16ГБ\n",
-      "GPU: Видеокарта: NVIDIA GeForce RTX 3070, Цена: 500, ВИДМ: 8ГБ\n",
-      "HDD: Жесткий диск: Western Digital Black SN750 NVMe SSD, Цена: 150, Объем: 1ТБ\n"
-     ]
-    }
-   ],
-   "source": [
-    "// Абстрактный базовый класс для всех компонентов компьютера\n",
-    "public abstract class Component\n",
-    "{\n",
-    "    // Имя компонента\n",
-    "    public string Name { get; set; }\n",
-    "    // Цена компонента\n",
-    "    public decimal Price { get; set; }\n",
-    "\n",
-    "    // Виртуальный метод для получения информации об компоненте\n",
-    "    public virtual string GetInfo()\n",
-    "    {\n",
-    "        return $\"Имя: {Name}, Цена: {Price}\";\n",
-    "    }\n",
-    "\n",
-    "    // Переопределенный метод ToString() для отображения списка компонентов\n",
-    "    public override string ToString()\n",
-    "    {\n",
-    "        return $\"{GetType().Name}: {GetInfo()}\"; // Возвращает имя текущего типа объекта\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "// Интерфейс для компонентов, которые можно устанавливать\n",
-    "public interface IInstallable\n",
-    "{\n",
-    "    // Метод для установки компонента\n",
-    "    void Install();\n",
-    "}\n",
-    "// Класс для процессора CPU\n",
-    "public class CPU : Component, IInstallable\n",
-    "{\n",
-    "    public override string GetInfo()\n",
-    "    {\n",
-    "        return $\"Процессор: {Name}, Цена: {Price}, Ядра: 4\"; \n",
-    "    }\n",
-    "\n",
-    "    // Метод установки процессора\n",
-    "    public void Install()\n",
-    "    {\n",
-    "        Console.WriteLine($\"Установка процессора: {Name}\");\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "// Класс для оперативной памяти RAM\n",
-    "public class RAM : Component, IInstallable\n",
-    "{\n",
-    "    public override string GetInfo()\n",
-    "    {\n",
-    "        return $\"Оперативная память: {Name}, Цена: {Price}, Объем: 16ГБ\";\n",
-    "    }\n",
-    "\n",
-    "    // Метод установки оперативной памяти\n",
-    "    public void Install()\n",
-    "    {\n",
-    "        Console.WriteLine($\"Установка оперативной памяти: {Name}\");\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "// Класс для видеокарты GPU\n",
-    "public class GPU : Component, IInstallable\n",
-    "{\n",
-    "    public override string GetInfo()\n",
-    "    {\n",
-    "        return $\"Видеокарта: {Name}, Цена: {Price}, ВИДМ: 8ГБ\";\n",
-    "    }\n",
-    "\n",
-    "    // Метод установки видеокарты\n",
-    "    public void Install()\n",
-    "    {\n",
-    "        Console.WriteLine($\"Установка видеокарты: {Name}\");\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "// Класс для жесткого диска HDD\n",
-    "public class HDD : Component, IInstallable\n",
-    "{\n",
-    "    public override string GetInfo()\n",
-    "    {\n",
-    "        return $\"Жесткий диск: {Name}, Цена: {Price}, Объем: 1ТБ\";\n",
-    "    }\n",
-    "\n",
-    "    // Метод установки жесткого диска\n",
-    "    public void Install()\n",
-    "    {\n",
-    "        Console.WriteLine($\"Установка жесткого диска: {Name}\");\n",
-    "    }\n",
-    "}\n",
-    "// Класс для представления компьютера\n",
-    "public class Computer\n",
-    "{\n",
-    "    // Список всех компонентов компьютера\n",
-    "    public List<Component> components = new List<Component>();\n",
-    "\n",
-    "    // Метод добавления нового компонента в компьютер\n",
-    "    public void AddComponent<T>(T component) where T : Component\n",
-    "    {\n",
-    "        components.Add(component);\n",
-    "    }\n",
-    "\n",
-    "    // Метод удаления компонента из компьютера\n",
-    "    public void RemoveComponent<T>(T component) where T : Component\n",
-    "    {\n",
-    "        components.Remove(component);\n",
-    "    }\n",
-    "\n",
-    "    // Метод расчета общей стоимости всех компонентов\n",
-    "    public decimal GetTotalPrice()\n",
-    "    {\n",
-    "        return components.Sum(c => c.Price);\n",
-    "    }\n",
-    "}\n",
-    "// Статический класс для создания настроек компьютера\n",
-    "public static class ComputerFactory\n",
-    "{\n",
-    "    // Метод для создания настроек компьютера на основе списка компонентов\n",
-    "    public static Computer CreateCustomConfig(List<Component> components)\n",
-    "    {\n",
-    "        var computer = new Computer();\n",
-    "        foreach (var component in components)\n",
-    "        {\n",
-    "            computer.AddComponent(component);\n",
-    "        }\n",
-    "        return computer;\n",
-    "    }\n",
-    "}\n",
-    "// Создание экземпляров компонентов\n",
-    "var cpu = new CPU { Name = \"Intel Core i7\", Price = 300m };\n",
-    "var ram = new RAM { Name = \"Corsair Vengeance LPX\", Price = 120m };\n",
-    "var gpu = new GPU { Name = \"NVIDIA GeForce RTX 3070\", Price = 500m };\n",
-    "var hdd = new HDD { Name = \"Western Digital Black SN750 NVMe SSD\", Price = 150m };\n",
-    "\n",
-    "// Создание настроек компьютера с помощью фабрики\n",
-    "var customConfig = ComputerFactory.CreateCustomConfig(new List<Component> { cpu, ram, gpu, hdd });\n",
-    "\n",
-    "// Вывод общей стоимости и информации о каждом компоненте\n",
-    "Console.WriteLine($\"Общая стоимость: ${customConfig.GetTotalPrice()}\");\n",
-    "\n",
-    "foreach (var component in customConfig.components)\n",
-    "{\n",
-    "    Console.WriteLine(component);\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
@@ -342,8 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -353,26 +189,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Installing CPU: Intel Core i5\n",
-      "Installing RAM: Kingston 8GB\n",
-      "Installing GPU: NVIDIA GTX 1660\n",
-      "Installing HDD: Seagate 1TB\n",
-      "Installing CPU: AMD Ryzen 7\n",
-      "Installing RAM: Corsair 16GB\n",
-      "Installing GPU: NVIDIA RTX 3080\n",
-      "Installing HDD: Samsung 2TB\n",
+      "Устанавливается процессор: Intel Core i5\n",
+      "Устанавливается оперативная память: Kingston 8GB\n",
+      "Устанавливается видеокарта: NVIDIA GTX 1660\n",
+      "Устанавливается жесткий диск: Seagate 1TB\n",
+      "Устанавливается процессор: AMD Ryzen 7\n",
+      "Устанавливается оперативная память: Corsair 16GB\n",
+      "Устанавливается видеокарта: NVIDIA RTX 3080\n",
+      "Устанавливается жесткий диск: Samsung 2TB\n",
       "Компоненты базового компьютера:\n",
-      "CPU: Intel Core i5, Cores: 6, Price: 250,00 ¤\n",
-      "RAM: Kingston 8GB, Capacity: 8GB, Price: 50,00 ¤\n",
-      "GPU: NVIDIA GTX 1660, VRAM: 6GB, Price: 300,00 ¤\n",
-      "HDD: Seagate 1TB, Storage: 1000 GB, Price: 70,00 ¤\n",
+      "Процессор: Intel Core i5, Ядер: 6, Цена: 250,00 ¤\n",
+      "Оперативная память: Kingston 8GB, Capacitor: 8GB, Цена: 50,00 ¤\n",
+      "GPU - Видеокарта: NVIDIA GTX 1660, VRAM: 6GB, Цена: 300,00 ¤\n",
+      "HDD - Жесткий диск: Seagate 1TB, Хранилище: 1000 GB, Цена: 70,00 ¤\n",
       "Общая стоимость: 670\n",
       "\n",
       "Компоненты игрового компьютера:\n",
-      "CPU: AMD Ryzen 7, Cores: 8, Price: 350,00 ¤\n",
-      "RAM: Corsair 16GB, Capacity: 16GB, Price: 100,00 ¤\n",
-      "GPU: NVIDIA RTX 3080, VRAM: 10GB, Price: 800,00 ¤\n",
-      "HDD: Samsung 2TB, Storage: 2000 GB, Price: 120,00 ¤\n",
+      "Процессор: AMD Ryzen 7, Ядер: 8, Цена: 350,00 ¤\n",
+      "Оперативная память: Corsair 16GB, Capacitor: 16GB, Цена: 100,00 ¤\n",
+      "GPU - Видеокарта: NVIDIA RTX 3080, VRAM: 10GB, Цена: 800,00 ¤\n",
+      "HDD - Жесткий диск: Samsung 2TB, Хранилище: 2000 GB, Цена: 120,00 ¤\n",
       "Общая стоимость: 1370\n",
       "\n",
       "CPU1 == CPU2: True\n"
@@ -395,7 +231,7 @@
     "\n",
     "    public virtual string GetInfo()\n",
     "    {\n",
-    "        return $\"Component: {Name}, Price: {Price:C}\";\n",
+    "        return $\"Компонент: {Name}, Цена: {Price:C}\";\n",
     "    }\n",
     "\n",
     "    public override string ToString()\n",
@@ -422,12 +258,12 @@
     "\n",
     "    public override string GetInfo()\n",
     "    {\n",
-    "        return $\"CPU: {Name}, Cores: {Cores}, Price: {Price:C}\";\n",
+    "        return $\"Процессор: {Name}, Ядер: {Cores}, Цена: {Price:C}\";\n",
     "    }\n",
     "\n",
     "    public void Install()\n",
     "    {\n",
-    "        Console.WriteLine($\"Installing CPU: {Name}\");\n",
+    "        Console.WriteLine($\"Устанавливается процессор: {Name}\");\n",
     "    }\n",
     "\n",
     "    public static bool operator ==(CPU cpu1, CPU cpu2)\n",
@@ -469,12 +305,12 @@
     "\n",
     "    public override string GetInfo()\n",
     "    {\n",
-    "        return $\"RAM: {Name}, Capacity: {Capacity}GB, Price: {Price:C}\";\n",
+    "        return $\"Оперативная память: {Name}, Capacitor: {Capacity}GB, Цена: {Price:C}\";\n",
     "    }\n",
     "\n",
     "    public void Install()\n",
     "    {\n",
-    "        Console.WriteLine($\"Installing RAM: {Name}\");\n",
+    "        Console.WriteLine($\"Устанавливается оперативная память: {Name}\");\n",
     "    }\n",
     "\n",
     "    public static bool operator ==(RAM ram1, RAM ram2)\n",
@@ -515,12 +351,12 @@
     "\n",
     "    public override string GetInfo()\n",
     "    {\n",
-    "        return $\"GPU: {Name}, VRAM: {VRAM}GB, Price: {Price:C}\";\n",
+    "        return $\"GPU - Видеокарта: {Name}, VRAM: {VRAM}GB, Цена: {Price:C}\";\n",
     "    }\n",
     "\n",
     "    public void Install()\n",
     "    {\n",
-    "        Console.WriteLine($\"Installing GPU: {Name}\");\n",
+    "        Console.WriteLine($\"Устанавливается видеокарта: {Name}\");\n",
     "    }public static bool operator ==(GPU gpu1, GPU gpu2)\n",
     "    {\n",
     "        if (ReferenceEquals(gpu1, gpu2)) return true;\n",
@@ -559,12 +395,12 @@
     "\n",
     "    public override string GetInfo()\n",
     "    {\n",
-    "        return $\"HDD: {Name}, Storage: {Storage} GB, Price: {Price:C}\";\n",
+    "        return $\"HDD - Жесткий диск: {Name}, Хранилище: {Storage} GB, Цена: {Price:C}\";\n",
     "    }\n",
     "\n",
     "    public void Install()\n",
     "    {\n",
-    "        Console.WriteLine($\"Installing HDD: {Name}\");\n",
+    "        Console.WriteLine($\"Устанавливается жесткий диск: {Name}\");\n",
     "    }\n",
     "\n",
     "    public static bool operator ==(HDD hdd1, HDD hdd2)\n",
